syntax = "proto3";

package horoscope;

service HoroscopeService {
    rpc GetHoroscope(GetHoroscopeRequest) returns (GetHoroscopeResponse) {}
}

message GetHoroscopeRequest {
    Sign sign = 1;
}

message GetHoroscopeResponse {
    string horoscope = 1;
}

enum Sign {
    UNSPECIFIED = 0;
    ARIES = 1;
    TAURUS = 2;
    Gemini = 3;
    CANCER = 4;
    LEO = 5;
    VIRGO = 6;
    LIBRA = 7;
    SCORPIO = 8;
    SAGITTARIUS = 9;
    CAPRICORN = 10;
    AQUARIUS = 11;
    PISCES = 12;
}